--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
     "axios": "^0.19.2",
+    "immer": "^6.0.2",
+    "intl": "^1.2.5",
     "json-server": "^0.16.1",
+    "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -23,7 +26,14 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.4",
     "react-navigation-stack": "^2.3.8",
+    "react-redux": "^7.2.0",
+    "react-toastify": "^5.5.0",
+    "reactotron-react-js": "^3.3.7",
     "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
